<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="enter_first_name">Enter Your First Name</string>
    <string name="name_hint">Name</string>
    <string name="app_name">Birds of a Feather</string>
    <string name="name_enter_error">You must enter a name</string>
    <string name="start_button">Start</string>
    <string name="submit">Submit</string>
    <string name="enter">Enter</string>
    <string name="year">Year:</string>
    <string name="quarter">Quarter:</string>
    <string name="course_number">Course Number:</string>
    <string name="subject">Subject:</string>
    <string name="enter_a_course">Enter a Course:</string>
    <string name="birds_of_a_feather">Birds of a Feather</string>
...
    <string name="image_url">Image URL</string>
    <string name="put_your_image_url_here">Put your image url here!</string>
    <string name="save">Save</string>
    <string name="textview">TextView</string>
    <string name="shared_courses">Shared Courses</string>
    <string name="go_back">GO BACK</string>
    <string name="cont">Continue</string>
    <string name="filter">Sort/Filter: </string>

    <string-array name="quarters_array">
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
...
