...
        android:text="@string/go_to_mock_bluetooth"
        android:onClick="goToMockBluetoothActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/start_button"
        android:onClick="onStartClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sessionNameText"
        android:layout_width="141dp"
        android:layout_height="36dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="22dp"
        android:text="TextView"
        android:textSize="12dp"
...
